Avoid line wrap before commas in extensions

--- a/frontend/src/app/extension-display/extension-display.component.css
+++ b/frontend/src/app/extension-display/extension-display.component.css
@@ -8,3 +8,7 @@
 .extension-rel-name {
   font-weight: bold;
 }
+
+.summary-gene-and-comma {
+  white-space: nowrap;
+}
